welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:11: error: not found: value EST
  setDirection(EST)
               ^DwarfCode:17: error: not found: value Direction
  setDirection(Direction.WEST)
               ^DwarfCode:22: error: not found: value Direction
  setDirection(Direction.EAST)
               ^